fix text alignment in user badge in column

--- a/src/main/webapp/Portal.css
+++ b/src/main/webapp/Portal.css
@@ -2386,6 +2386,10 @@ div.input-group > input.search-textbox {
 .text-align-right {
 	text-align: right;
 }
+.text-align-left {
+	text-align: left;
+}
+
 
 .inlineField {
 	overflow: hidden; 
